--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "chart.js": "^4.4.1",
     "vue": "^3.4.15",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
